--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <head>
-    <META http-equiv="refresh" content="0;URL=/gs-viewer/dist/index.html">
+    <META http-equiv="refresh" content="">
   </head>
 </html>
